--- a/basic-eda-cleaning-and-glove.ipynb
+++ b/basic-eda-cleaning-and-glove.ipynb
@@ -1445,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size='5' color='red'>  if you like this kernel,please do an upvote.</font>"
+    "<font size='5' color='red'>  .</font>"
    ]
   },
   {
