--- a/basic-eda-cleaning-and-glove.ipynb
+++ b/basic-eda-cleaning-and-glove.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's in this kernel?\n",
+    "## What's in this?\n",
     "- Basic EDA\n",
     "- Data Cleaning\n",
     "- Baseline Model"
